# displayxr-demo-gaussiansplat

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  TESTING_WINDOWS.md  settings.gradle
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
3dgs_common/: CMakeLists.txt  gs_adreno_renderer.cpp  gs_adreno_renderer.h  gs_renderer.cpp  gs_renderer.h  gs_renderer_select.h  gs_runtime_select.h  gs_scene_loader.cpp  gs_scene_loader.h  gs_spz_loader.cpp  gs_spz_loader.h  gs_vulkan_utils.cpp  gs_vulkan_utils.h
3dgs_common/shaders/: adreno_preprocess.comp  common.glsl  hist.comp  precomp_cov3d.comp  prefix_sum.comp  preprocess.comp  preprocess_sort.comp  render.comp  sort.comp  splat.frag  splat.vert  splat_keys.comp  tile_boundary.comp
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  main.cpp
android/src/main/java/com/displayxr/gausssplat_vk_android/: MainActivity.kt
android/src/main/res/values/: ic_launcher_background.xml
common/: CMakeLists.txt  display3d_view.c  display3d_view.h  input_handler.cpp  input_handler.h  view_rig_math.h  xr_session_common.cpp  xr_session_common.h
installer/: DisplayXRGaussianSplatInstaller.nsi  build-installer.bat
installer/macos/: Distribution.xml  build_installer.sh  create_app_bundle.sh
installer/macos/resources/: welcome.html
linux/: CMakeLists.txt  main.cpp
macos/: CMakeLists.txt  main.mm
openxr_includes/openxr/: XR_EXT_cocoa_window_binding.h
scripts/: build-with-deps.bat  build_linux.sh  build_macos.sh  build_windows.bat  dev_register.bat
windows/: CMakeLists.txt  main.cpp  resource.rc  sr_3dgs_openxr_ext_vk.manifest  xr_session.cpp  xr_session.h
windows/displayxr/: gaussian_splatting_handle_vk_win.displayxr.json
